src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>EE_Status__c</fullName>
        <description>Employee Status</description>
        <inlineHelpText>Select from pick list</inlineHelpText>
        <label>Current Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>The employee remains on temporary disability</fullName>
                </value>
                <value>
                    <fullName>The employee is working usual and customary</fullName>
                </value>
                <value>
                    <fullName>The employee is working modified duty, same employer (permanent)</fullName>
                </value>
                <value>
                    <fullName>The employee is working modified duty, same employer (temporary)</fullName>
                </value>
                <value>
                    <fullName>The employee is working with a different employer</fullName>
                </value>
                <value>
                    <fullName>The employee is released to work, but not working</fullName>
                </value>
                <value>
                    <fullName>The employee is on temporary partial disability</fullName>
                </value>
                <value>
                    <fullName>The employee is on permanent disability</fullName>
                </value>
                <value>
                    <fullName>The employee is retired</fullName>
                </value>
                <value>
                    <fullName>The employee is laid off</fullName>
                </value>
                <value>
                    <fullName>The employee has elected not to return to work</fullName>
                </value>
                <value>
                    <fullName>The employee is QIW eligible</fullName>
                </value>
                <value>
                    <fullName>Employee remains on temporary total disability</fullName>
                </value>
                <value>
                    <fullName>Employee is working usual and customary (full duty)</fullName>
                </value>
                <value>
                    <fullName>Employee is released to modified duty, but modified duty is unavailable</fullName>
                </value>
                <value>
                    <fullName>Employee is working modified duty, same Employer (permanent)</fullName>
                </value>
                <value>
                    <fullName>Employee is working modified duty, same Employer (temporary)</fullName>
                </value>
                <value>
                    <fullName>Employee is working modified duty with a different Employer</fullName>
                </value>
                <value>
                    <fullName>Employee is working usual and customary with a different Employer</fullName>
                </value>
                <value>
                    <fullName>Employee is on temporary partial disability</fullName>
                </value>
                <value>
                    <fullName>Employee is on permanent disability</fullName>
                </value>
                <value>
                    <fullName>Employee is retired</fullName>
                </value>
                <value>
                    <fullName>Employee is released to modified duty, but is laid-off</fullName>
                </value>
                <value>
                    <fullName>Employee is released to usual and customary (full duty), but is laid-off</fullName>
                </value>
                <value>
                    <fullName>Employee has elected not to return to work</fullName>
                </value>
                <value>
                    <fullName>Employee treating under Future Medical</fullName>
                </value>
                <value>
                    <fullName>Employee is terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Status__c</fullName>
        <description>Employer Status</description>
        <inlineHelpText>Select from pick list</inlineHelpText>
        <label>Employer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employer contacted and cooperative with RTW</fullName>
                </value>
                <value>
                    <fullName>Employer unavailable at this time</fullName>
                </value>
                <value>
                    <fullName>Employer contacted, NOT cooperative with RTW</fullName>
                </value>
                <value>
                    <fullName>Modified duty available, as indicated by Claims Professional</fullName>
                </value>
                <value>
                    <fullName>Modified duty available, as indicated by Employer</fullName>
                </value>
                <value>
                    <fullName>Modified duty unavailable, as indicated by Claims Professional</fullName>
                </value>
                <value>
                    <fullName>Modified duty unavailable, as indicated by Employer</fullName>
                </value>
                <value>
                    <fullName>Available modified duty pending confirmation</fullName>
                </value>
                <value>
                    <fullName>Modified duty not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Update_Sent__c</fullName>
        <label>ER Update Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Medically_Stationary__c</fullName>
        <description>Is Employee Medically Stationary ?</description>
        <label>Is Employee Medically Stationary ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Motivation_Explanation__c</fullName>
        <description>If needed, explain selection for reason for return to work motivation status</description>
        <inlineHelpText>Indicate reason for selection</inlineHelpText>
        <label>Employee Motivation Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Motivation_to_Return_to_Work__c</fullName>
        <description>Employee Motivation to Return to Work</description>
        <inlineHelpText>Select from pick list; High, Low, Indifferent, Not Able to Determne, Not Applicable</inlineHelpText>
        <label>Employee Motivation to Return to Work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Indifferent</fullName>
                </value>
                <value>
                    <fullName>Not able to determine</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <label>Current Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee remains on temporary total disability</fullName>
                </value>
                <value>
                    <fullName>Employee is working usual and customary (full duty)</fullName>
                </value>
                <value>
                    <fullName>Employee is released to modified duty, but modified duty is unavailable</fullName>
                </value>
                <value>
                    <fullName>Employee is working modified duty, same employer (permanent)</fullName>
                </value>
                <value>
                    <fullName>Employee is working modified duty, same employer (temporary)</fullName>
                </value>
                <value>
                    <fullName>Employee is working modified duty with a different Employer</fullName>
                </value>
                <value>
                    <fullName>Employee is working usual and customer with a different Employer</fullName>
                </value>
                <value>
                    <fullName>Employee is on temporary partial disability</fullName>
                </value>
                <value>
                    <fullName>Employee is on permanent disability</fullName>
                </value>
                <value>
                    <fullName>Employee is retired</fullName>
                </value>
                <value>
                    <fullName>Employee is released to modified duty, but is laid-off</fullName>
                </value>
                <value>
                    <fullName>Employee is relased to usual and customary (full duty), but is laid-off</fullName>
                </value>
                <value>
                    <fullName>Employee is has elected not to return to work</fullName>
                </value>
                <value>
                    <fullName>Employee treating under Future Medical</fullName>
                </value>
                <value>
                    <fullName>Employee is terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Subjective_Complaints__c</fullName>
        <inlineHelpText>Narrative of EE&apos;s complaints. Include EE&apos;s opinion of his recovery and description of symptoms.  NOT included are: reason for not attending appt, nature &amp; history of injury and anything other than the EE&apos;s own assessment.</inlineHelpText>
        <label>Employee Subjective Complaints</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup Employee associated to the Report</inlineHelpText>
        <label>Employee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Case_Reports_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer_Status__c</fullName>
        <label>Employer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Modified Duty available, as indicated by Claims Professional</fullName>
                </value>
                <value>
                    <fullName>Modified Duty available, as indicated by Employer</fullName>
                </value>
                <value>
                    <fullName>Modified Duty unavailable, as indicated by Claims Professional</fullName>
                </value>
                <value>
                    <fullName>Modified Duty unavailable, as indicated by Employer</fullName>
                </value>
                <value>
                    <fullName>Available modified duty pending confirmation</fullName>
                </value>
                <value>
                    <fullName>Modified duty not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enclosures__c</fullName>
        <description>Enclosures</description>
        <inlineHelpText>List emails, medical reports, work status etc and indicate description and date of document.  Emails can be clumped with date range.  If no enclosures indicate &quot;none&quot;</inlineHelpText>
        <label>Enclosures</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Submission_Closed_Date__c</fullName>
        <label>First Submission Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Duty_Explanation__c</fullName>
        <description>Full Duty Explanation</description>
        <inlineHelpText>If not yet released to full duty provide explanation or indicate &apos;Not Applicable&apos; if they were released to modified duty.</inlineHelpText>
        <label>Full Duty Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Future_Medical_Care_Details__c</fullName>
        <description>Future Medical Care Details</description>
        <inlineHelpText>Justify reasons and medical care details</inlineHelpText>
        <label>Future Medical Care Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Future_Medical_Care_Required__c</fullName>
        <description>Future Medical Care Required ?</description>
        <label>Future Medical Care Required ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_s_for_Task_Assignment__c</fullName>
        <label>Goal(s) for Task Assignment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>I_Will__c</fullName>
        <inlineHelpText>Document the NCM plan of action.  Planned activities that will be completed to achieve file resolution must appear here as statements of action stating &quot;I will&quot;, etc. Include who, what, when and where for each item.</inlineHelpText>
        <label>I Will</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impairment__c</fullName>
        <description>AMA Guideline Whole Person Impairment (WPI) %</description>
        <inlineHelpText>AMA Guideline Whole Person Impairment (WPI) %.  As indicated by the physician in the P&amp;S report.  If not P&amp;S, indicate zero% and state in &quot;Additional Comments&quot; that the employee is not yet P&amp;S.</inlineHelpText>
        <label>AMA Guideline WPI%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Impairment_based_on_AMA_Guidelines__c</fullName>
        <description>Impairment based on AMA Guidelines ?</description>
        <inlineHelpText>Permanent impairments only</inlineHelpText>
        <label>Impairment based on AMA Guidelines?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Review_By__c</fullName>
        <label>In Review By</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Review_Date_Time__c</fullName>
        <description>If the report is in review - this is the date and time it was put in review</description>
        <label>In Review Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Review__c</fullName>
        <label>In Review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Error_A__c</fullName>
        <label>Integration Error A</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Error_B__c</fullName>
        <label>Integration Error B</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InvoiceMailed__c</fullName>
        <description>Select date invoice sent to Customer.</description>
        <inlineHelpText>Select date invoice sent to Customer.</inlineHelpText>
        <label>Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Mileage_Total__c</fullName>
        <formula>B_Mileage_Billings_Total__c +  B_Rush_Mileage_Billings_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount Mileage Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Non_Professional_Hours__c</fullName>
        <formula>B_Non_Professional_Billings_Total__c +  B_Rush_Non_Professional_Billings_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount Non Professional Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Prof_Hours__c</fullName>
        <formula>B_Professional_Hours_Total__c +  B_Rush_Professional_Hours_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount Prof Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Professional_Hours__c</fullName>
        <formula>B_Professional_Billings_Total__c +  B_Rush_Professional_Billings_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount Professional Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_non_Prof_Hours__c</fullName>
        <formula>B_Non_Professional_Hours_Total__c +  B_Non_Professional_Hours_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount non-Prof Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Id__c</fullName>
        <description>External Invoice ID from Quickbooks.</description>
        <externalId>true</externalId>
        <label>Invoice Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <description>Invoice #</description>
        <label>Invoice #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Employee_Job_Evaluation_Avail__c</fullName>
        <description>Is Employee Job Evaluation Available?</description>
        <inlineHelpText>Select from pick list</inlineHelpText>
        <label>Status of EE Job Description (JD)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, Claims Professional to obtain and provide</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Job Description available and received</fullName>
                </value>
                <value>
                    <fullName>Job Description requested pending response</fullName>
                </value>
                <value>
                    <fullName>Job Description requested pending receipt</fullName>
                </value>
                <value>
                    <fullName>Job Description provided to physician</fullName>
                </value>
                <value>
                    <fullName>Job Description not available</fullName>
                </value>
                <value>
                    <fullName>Job Description not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JA_Status_Date__c</fullName>
        <description>Date JA was recommended/authorized/received/requested/provided</description>
        <inlineHelpText>Select date for current JA status, if not applicable leave date field blank</inlineHelpText>
        <label>JA Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JA_was__c</fullName>
        <label>JA was</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>recommended</fullName>
                </value>
                <value>
                    <fullName>authorized</fullName>
                </value>
                <value>
                    <fullName>received</fullName>
                </value>
                <value>
                    <fullName>requested</fullName>
                </value>
                <value>
                    <fullName>provided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Analysis_Explanation__c</fullName>
        <inlineHelpText>To be completed if the previous is N/A</inlineHelpText>
        <label>Job Analysis Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Evaluation_Explanation__c</fullName>
        <description>Job Evaluation - Explanation</description>
        <inlineHelpText>Select from pick list</inlineHelpText>
        <label>Job Evaluation - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <inlineHelpText>To be completed if the previous selection is N/A</inlineHelpText>
        <label>Job Description Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <formula>TEXT ( Related_Case__r.Jurisdiction__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jurisdiction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Report_Rating__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links Record to Late Report Object</description>
        <label>Late Report Rating</label>
        <referenceTo>Late_Report_Review__c</referenceTo>
        <relationshipLabel>Case Reports / Opportunities (Late Report Rating)</relationshipLabel>
        <relationshipName>Case_Reports_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Late_Report_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Late Report Review</label>
        <referenceTo>Late_Report_Review__c</referenceTo>
        <relationshipLabel>Case Reports / Opportunities</relationshipLabel>
        <relationshipName>Case_Reports_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Light_Duty_Modified_Duty_Available__c</fullName>
        <description>Light Duty / Modified Duty Available ?</description>
        <inlineHelpText>Select Yes, as reported by or No, as reported by and indicate the person that stated yes or no and include additional comments.</inlineHelpText>
        <label>Light Duty / Modified Duty Available ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, as reported by</fullName>
                </value>
                <value>
                    <fullName>No, as reported by</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Light_Modified_Duty_Comments__c</fullName>
        <description>Explanation of Employer status if needed</description>
        <inlineHelpText>Indicate additional information regarding the availability of modified duty, such as may accommodate any restriction, may accommodate for 90 days, Employee is unemployed, laid-off, retired, or on permanent disability</inlineHelpText>
        <label>Employer Status Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>List_Detailed_Restrictions__c</fullName>
        <description>List Detailed Restrictions</description>
        <label>List Detailed Restrictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MD_Findings_at_Exam__c</fullName>
        <inlineHelpText>Narrative form; MD physical findings.  Include; range of motion, neuro testing, strength testing, treatment recommendations; prescription medications and physical therapy etc.</inlineHelpText>
        <label>MD Findings at Exam</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_Improvement_Explanation__c</fullName>
        <description>Explanation for the date MD deemed maximum improvement has been reached</description>
        <inlineHelpText>If not applicable provide explanation.</inlineHelpText>
        <label>Maximum Improvement Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_Improvement_deemed_on__c</fullName>
        <description>Date the employee reached maximum improvement per MD</description>
        <inlineHelpText>Select date physician deemed MMI.</inlineHelpText>
        <label>Maximum Improvement deemed on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MileageBillingTotal__c</fullName>
        <formula>B_Mileage_Billings_Total__c + B_Rush_Mileage_Billings_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mileage Activity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage_Rate__c</fullName>
        <label>Mileage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Modified_Duty_Explanation__c</fullName>
        <description>Released to modified duty explanation</description>
        <inlineHelpText>If not yet released to modified duty provide explanation or indicate &apos;Not Applicable&apos; if they were released to full duty.</inlineHelpText>
        <label>Modified Duty Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NextApptDateTime__c</fullName>
        <inlineHelpText>Select and indicate the date and time of the next appointment for any provider.</inlineHelpText>
        <label>Next Appt Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nextapptnotscheduledbecause__c</fullName>
        <inlineHelpText>Indicate the reason why the next visit is not scheduled.</inlineHelpText>
        <label>Next appt not scheduled because:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nextapptscheduledwith__c</fullName>
        <inlineHelpText>Indicate the physician or medical facility where the next visit will take place.</inlineHelpText>
        <label>Next appt scheduled with:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NotincludedforPPE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Reports that will not be included in PPE</description>
        <inlineHelpText>Check if Case Report will not be included for PPE</inlineHelpText>
        <label>Not included for PPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ODG__c</fullName>
        <inlineHelpText>ODG/ACOEM depending on state – QC will complete for NCM based on current diagnosis</inlineHelpText>
        <label>Evidence Based Guidelines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Charge_Count__c</fullName>
        <label>Open Charge Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Charges__c</fullName>
        <label>Open Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Payout_Count__c</fullName>
        <label>Open Payout Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Payouts__c</fullName>
        <label>Open Payouts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Transfer_Count__c</fullName>
        <label>Open Transfer Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Transfers__c</fullName>
        <label>Open Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Factors_Effecting_Recovery__c</fullName>
        <description>Other Factors Effecting Recovery</description>
        <inlineHelpText>If no is selected above this section must be completed.  Address other factors causing treatment to fall outside of guidelines. Examples include: medical, employment, socio / economic factors impacting file progression.  As factors resolve indicate such.</inlineHelpText>
        <label>Other Factors Influencing Recovery :</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Info__c</fullName>
        <description>CHUBB ONLY: Excessive Travel Time to be explained</description>
        <inlineHelpText>CHUBB ONLY: Excessive Travel Time to be explained</inlineHelpText>
        <label>Other Info:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Pertinent_Information__c</fullName>
        <inlineHelpText>Chubb Initial: EE Personal Info; DOB, Ht, Wt, general appearance; distinguishing features, hobbies, outside activities; social and financial info; how many members living in household; are family members available to assist w/med treatment issues?</inlineHelpText>
        <label>Other Pertinent Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P_S_Comment__c</fullName>
        <description>Assessment Comment</description>
        <inlineHelpText>Address current status, why they are approaching P&amp;S/S&amp;R/Stationary status or why they are not.</inlineHelpText>
        <label>Assessment Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P_S_PTP_Discussion__c</fullName>
        <description>Date of Assessment</description>
        <inlineHelpText>Select date of conversation with the PTP or date of Nurse Case Manager assessment of progress towards P&amp;S/S&amp;R/Stationary status</inlineHelpText>
        <label>Date of Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_S_Target_Date__c</fullName>
        <description>Target Date</description>
        <inlineHelpText>Select anticipated date based on physician&apos;s recommendation and Nurse Case Manager&apos;s assessment</inlineHelpText>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PayrollSubmissionDate__c</fullName>
        <label>Payroll Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PersonAccount__c</fullName>
        <formula>IF(
Employee__r.IsPersonAccount = TRUE,
&quot;Yes&quot;,
&quot;No&quot;)</formula>
        <label>Person Account?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryCMTravelWaitHoursCredit__c</fullName>
        <label>Primary CM Travel/Wait Units Approved</label>
        <summarizedField>Case_Note_Entry__c.Travel_Wait_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Primary_Nurse__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_NCM_Mileage__c</fullName>
        <label>Primary CM Mileage</label>
        <summarizedField>Case_Note_Entry__c.Mileage_Nurse__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Primary_Nurse__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_NCM_Prof_Hours__c</fullName>
        <label>Primary CM Prof. Units</label>
        <summarizedField>Case_Note_Entry__c.Professional_Hours_Nurse__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Primary_Nurse__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>